pytils (0.2.3)

  * Add support for Django unicode branch (#27)
  * Make pytils.test to be optional package, not required (#26)
  * Make checks of input parameters by decorators (#18)
  * Python-2.3 is not supported now (decorators are used)
  * Add custom exception pytils.err.InputParameterError, inherited from TypeError

 -- Yury Yurevich <the.pythy@gmail.com>  Fri, 15 Aug 2008 20:45:12 +0700

pytils (0.2.2)

  * fix zeros in dates (#24)
  * add 'preposition' option to dt.ru_strftime (#23)
  * fix bugs (#20, #22, #25)
  * add get_plural to pytils.numeral (#19)
  * add escaping in variants (#21)

 -- Yury Yurevich <the.pythy@gmail.com>  Thu, 12 Jul 2007 17:31:12 +0700

pytils (0.2.1)

  * fix bugs (#10, #14, #15)
  * improve gender manipulation in numeral (issue#13)
  * add GPL header
  * add unit-tests for templatetags

 -- Yury Yurevich <the.pythy@gmail.com>  Tue, 27 Feb 2007 21:08:31 +0600

pytils (0.2.0)

  * integration with Django (templatetags)
  * examples for Django and TurboGears
  * remove asserts
  * add datatime.datetime type for distance_of_time_in_words
  * improve docs
  * make eggs

 -- Yury Yurevich <the.pythy@gmail.com>  Sun, 29 Oct 2006 23:30:17 +0600 

pytils (0.1.0)

  * initial release

 -- Yury Yurevich <the.pythy@gmail.com>  Sat,  2 Sep 2006 22:52:37 +0600