@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
 # -*- test-case-name: pytils.test.test_translit -*-
 # pytils - russian-specific string utils
-# Copyright (C) 2006-2008  Yury Yurevich
+# Copyright (C) 2006-2009  Yury Yurevich
 #
-# http://www.pyobject.ru/projects/pytils/
+# http://pyobject.ru/projects/pytils/
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
